<resources>
    <string name="app_name">Musical Structure</string>
    <string name="get_started">GET STARTED</string>
    <string name="happy">HAPPY</string>
    <string name="love">LOVE</string>
    <string name="work">WORK</string>
    <string name="kids">KIDS</string>
    <string name="party">PARTY</string>
    <string name="sleep">SLEEP</string>
    <string name="summer">SUMMER</string>
    <string name="get_up">GET UP</string>
    <string name="dance">DANCE</string>
    <string name="song_name_text_view">Supersonic</string>
    <string name="artist_name_text_view">Oasis</string>
    <string name="activity_label_explore">Explore</string>
    <string name="activity_label_now_playing">Now Playing</string>
    <string name="contentDescription_ImageView_list_item">list_item_icons</string>
    <string name="musicOne">1. Supersonic</string>
    <string name="musicTwo">2. Yellow</string>
    <string name="musicThree">3. Times Like These</string>
    <string name="musicFour">4. Use Somebody</string>
    <string name="musicFive">5. Lake Of Fire</string>
    <string name="musicSix">6. Sonnet</string>
    <string name="musicSeven">7. Fake Plastic Trees</string>
    <string name="musicEight">8. The A Team</string>
    <string name="musicNine">9. Close To Me</string>
    <string name="musicTen">10. Evenflow</string>
    <string name="artistOasis">Oasis</string>
    <string name="artistColdplay">Coldplay</string>
    <string name="artistFooFighters">Foo Fighthers</string>
    <string name="artistKingsOfLeon">Kings of Leon</string>
    <string name="artistNirvana">Nirvana</string>
    <string name="artistTheVerve">The Verve</string>
    <string name="artistRadiohead">Radiohead</string>
    <string name="artistEdSheeran">Ed Sheeran</string>
    <string name="artistTheCure">The Cure</string>
    <string name="artistPearlJam">Pearl Jam</string>
</resources>